// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> default renders default props 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 emyWjc Spaceweb__Space-njatzl-0 gfWbbX Sizeweb__Size-sc-10bl685-0 ecrXiG"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 Labelweb__FloatView-jw60wd-0 kOyWtk Spaceweb__Space-njatzl-0 egTcPC"
          >
            <label
              class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 iaevDk"
              color="shade.980"
              data-testid="ds-text"
              value=""
              width="medium"
            >
              Label
            </label>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 ifVRzc Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 hqOwlt Sizeweb__Size-sc-10bl685-0 ccPMIj Spaceweb__Space-njatzl-0 ka-DExz Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              inputmode="numeric"
              placeholder="Enter text here"
              value=""
            />
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 dqNyBh Sizeweb__Size-sc-10bl685-0 htlLka"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> helpText should render TextInput with help text if helpText is provided as prop 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 emyWjc Spaceweb__Space-njatzl-0 gfWbbX Sizeweb__Size-sc-10bl685-0 ecrXiG"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 Labelweb__FloatView-jw60wd-0 kOyWtk Spaceweb__Space-njatzl-0 egTcPC"
          >
            <label
              class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 iaevDk"
              color="shade.980"
              data-testid="ds-text"
              value=""
              width="medium"
            >
              Label
            </label>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 ifVRzc Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 hqOwlt Sizeweb__Size-sc-10bl685-0 ccPMIj Spaceweb__Space-njatzl-0 ka-DExz Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              inputmode="numeric"
              placeholder="Enter text here"
              value=""
            />
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 dqNyBh Sizeweb__Size-sc-10bl685-0 htlLka"
        />
        <div
          class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jxcXPq"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 libPPx Spaceweb__Space-njatzl-0 cUyWDv"
          >
            <div
              class="Textweb__Text-sc-6jf9e4-0 krUdvH"
              color="shade.950"
              data-testid="ds-text"
            >
              This is help text
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> helpText with maxLength should render TextInput with character count as fraction 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 emyWjc Spaceweb__Space-njatzl-0 gfWbbX Sizeweb__Size-sc-10bl685-0 ecrXiG"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 Labelweb__FloatView-jw60wd-0 kOyWtk Spaceweb__Space-njatzl-0 egTcPC"
          >
            <label
              class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 iaevDk"
              color="shade.980"
              data-testid="ds-text"
              value=""
              width="medium"
            >
              Label
            </label>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 ifVRzc Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 hqOwlt Sizeweb__Size-sc-10bl685-0 ccPMIj Spaceweb__Space-njatzl-0 ka-DExz Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              inputmode="numeric"
              maxlength="10"
              placeholder="Enter text here"
              value=""
            />
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 dqNyBh Sizeweb__Size-sc-10bl685-0 htlLka"
        />
        <div
          class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jxcXPq"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 libPPx Spaceweb__Space-njatzl-0 cUyWDv"
          >
            <div
              class="Textweb__Text-sc-6jf9e4-0 krUdvH"
              color="shade.950"
              data-testid="ds-text"
            >
              This is help text
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 lhSUkp Spaceweb__Space-njatzl-0 iiiHlL"
          >
            <div
              class="Textweb__Text-sc-6jf9e4-0 krUdvH"
              color="shade.950"
              data-testid="ds-text"
            >
              0/10
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> iconLeft renders TextInput with iconLeft 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 emyWjc Spaceweb__Space-njatzl-0 gfWbbX Sizeweb__Size-sc-10bl685-0 ecrXiG"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 Labelweb__FloatView-jw60wd-0 kOyWtk Spaceweb__Space-njatzl-0 egTcPC"
          >
            <label
              class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 iaevDk"
              color="shade.980"
              data-testid="ds-text"
              for="sample-id"
              value=""
              width="medium"
            >
              Sample Label
            </label>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 ifVRzc Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <svg
              class="Flexweb__Flex-ni2cjg-0 dzXWge Spaceweb__Space-njatzl-0 EdEFf"
              data-testid="ds-icon"
              fill="rgba(22, 47, 86, 0.38)"
              height="16"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M11 9h2V7h-2m1 13c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-18A10 10 0 002 12a10 10 0 0010 10 10 10 0 0010-10A10 10 0 0012 2m-1 15h2v-6h-2v6z"
              />
            </svg>
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 hqOwlt Sizeweb__Size-sc-10bl685-0 ccPMIj Spaceweb__Space-njatzl-0 ka-DExz Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              id="sample-id"
              inputmode="numeric"
              placeholder="Enter text here"
              value=""
            />
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 dqNyBh Sizeweb__Size-sc-10bl685-0 htlLka"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> iconRight renders TextInput with iconRight 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 emyWjc Spaceweb__Space-njatzl-0 gfWbbX Sizeweb__Size-sc-10bl685-0 ecrXiG"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 Labelweb__FloatView-jw60wd-0 kOyWtk Spaceweb__Space-njatzl-0 egTcPC"
          >
            <label
              class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 iaevDk"
              color="shade.980"
              data-testid="ds-text"
              for="sample-id"
              value=""
              width="medium"
            >
              Sample Label
            </label>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 ifVRzc Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 hqOwlt Sizeweb__Size-sc-10bl685-0 ccPMIj Spaceweb__Space-njatzl-0 ka-DExz Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              id="sample-id"
              inputmode="numeric"
              placeholder="Enter text here"
              value=""
            />
            <svg
              class="Flexweb__Flex-ni2cjg-0 dzXWge Spaceweb__Space-njatzl-0 kyDZkb"
              data-testid="ds-icon"
              fill="rgba(22, 47, 86, 0.38)"
              height="16"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M11 9h2V7h-2m1 13c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-18A10 10 0 002 12a10 10 0 0010 10 10 10 0 0010-10A10 10 0 0012 2m-1 15h2v-6h-2v6z"
              />
            </svg>
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 dqNyBh Sizeweb__Size-sc-10bl685-0 htlLka"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> label renders input with labelPosition on left and variant filled 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <label
        class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 iaevDk Spaceweb__Space-njatzl-0 iqcLxO"
        color="shade.980"
        data-testid="ds-text"
        for="sample-id"
        id="sample-id"
        value=""
        width="medium"
      >
        Sample Label
      </label>
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 bZFGKN Spaceweb__Space-njatzl-0 jXWaIv Sizeweb__Size-sc-10bl685-0 nAZvE"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 ifVRzc Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 gZpLsp Sizeweb__Size-sc-10bl685-0 ccPMIj Spaceweb__Space-njatzl-0 dWKXUv Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              id="sample-id"
              inputmode="numeric"
              placeholder="Enter text here"
              value=""
            />
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 dqNyBh Sizeweb__Size-sc-10bl685-0 htlLka"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> label renders input with labelPosition on top(default) and variant filled 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <label
      class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 bujbGJ Spaceweb__Space-njatzl-0 egTcPC"
      color="shade.980"
      data-testid="ds-text"
      for="sample-id"
      id="sample-id"
      value=""
      width="medium"
    >
      Sample Label
    </label>
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 bZFGKN Spaceweb__Space-njatzl-0 jXWaIv Sizeweb__Size-sc-10bl685-0 nAZvE"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 ifVRzc Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 gZpLsp Sizeweb__Size-sc-10bl685-0 ccPMIj Spaceweb__Space-njatzl-0 dWKXUv Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              id="sample-id"
              inputmode="numeric"
              placeholder="Enter text here"
              value=""
            />
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 dqNyBh Sizeweb__Size-sc-10bl685-0 htlLka"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> label renders input with labelPosition on top(default) and variant outlined(default) 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 emyWjc Spaceweb__Space-njatzl-0 gfWbbX Sizeweb__Size-sc-10bl685-0 ecrXiG"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 Labelweb__FloatView-jw60wd-0 kOyWtk Spaceweb__Space-njatzl-0 egTcPC"
          >
            <label
              class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 iaevDk"
              color="shade.980"
              data-testid="ds-text"
              for="sample-id"
              value=""
              width="medium"
            >
              Sample Label
            </label>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 ifVRzc Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 hqOwlt Sizeweb__Size-sc-10bl685-0 ccPMIj Spaceweb__Space-njatzl-0 ka-DExz Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              id="sample-id"
              inputmode="numeric"
              placeholder="Enter text here"
              value=""
            />
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 dqNyBh Sizeweb__Size-sc-10bl685-0 htlLka"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> prefix renders TextInput with prefix 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 emyWjc Spaceweb__Space-njatzl-0 gfWbbX Sizeweb__Size-sc-10bl685-0 ecrXiG"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 Labelweb__FloatView-jw60wd-0 kOyWtk Spaceweb__Space-njatzl-0 egTcPC"
          >
            <label
              class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 iaevDk"
              color="shade.980"
              data-testid="ds-text"
              for="sample-id"
              value=""
              width="medium"
            >
              Sample Label
            </label>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 ifVRzc Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <div
              class="Textweb__Text-sc-6jf9e4-0 iFsPRm Spaceweb__Space-njatzl-0 EdEFf"
              color="shade.950"
              data-testid="ds-text"
            >
              ₹
            </div>
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 hqOwlt Sizeweb__Size-sc-10bl685-0 ccPMIj Spaceweb__Space-njatzl-0 ka-DExz Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              id="sample-id"
              inputmode="numeric"
              placeholder="Enter text here"
              value=""
            />
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 dqNyBh Sizeweb__Size-sc-10bl685-0 htlLka"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> suffix renders TextInput with suffix 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 emyWjc Spaceweb__Space-njatzl-0 gfWbbX Sizeweb__Size-sc-10bl685-0 ecrXiG"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 Labelweb__FloatView-jw60wd-0 kOyWtk Spaceweb__Space-njatzl-0 egTcPC"
          >
            <label
              class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 iaevDk"
              color="shade.980"
              data-testid="ds-text"
              for="sample-id"
              value=""
              width="medium"
            >
              Sample Label
            </label>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 ifVRzc Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 hqOwlt Sizeweb__Size-sc-10bl685-0 ccPMIj Spaceweb__Space-njatzl-0 ka-DExz Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              id="sample-id"
              inputmode="numeric"
              placeholder="Enter text here"
              value=""
            />
            <div
              class="Textweb__Text-sc-6jf9e4-0 iFsPRm Spaceweb__Space-njatzl-0 kyDZkb"
              color="shade.950"
              data-testid="ds-text"
            >
              ₹
            </div>
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 dqNyBh Sizeweb__Size-sc-10bl685-0 htlLka"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> variant renders filled variant with default props 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <label
      class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 bujbGJ Spaceweb__Space-njatzl-0 egTcPC"
      color="shade.980"
      data-testid="ds-text"
      value=""
      width="medium"
    >
      Label
    </label>
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 bZFGKN Spaceweb__Space-njatzl-0 jXWaIv Sizeweb__Size-sc-10bl685-0 nAZvE"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 ifVRzc Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 gZpLsp Sizeweb__Size-sc-10bl685-0 ccPMIj Spaceweb__Space-njatzl-0 dWKXUv Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              inputmode="numeric"
              placeholder="Enter text here"
              value=""
            />
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 dqNyBh Sizeweb__Size-sc-10bl685-0 htlLka"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> variant renders outlined variant with default props 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 emyWjc Spaceweb__Space-njatzl-0 gfWbbX Sizeweb__Size-sc-10bl685-0 ecrXiG"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 Labelweb__FloatView-jw60wd-0 kOyWtk Spaceweb__Space-njatzl-0 egTcPC"
          >
            <label
              class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 iaevDk"
              color="shade.980"
              data-testid="ds-text"
              value=""
              width="medium"
            >
              Label
            </label>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 ifVRzc Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 hqOwlt Sizeweb__Size-sc-10bl685-0 ccPMIj Spaceweb__Space-njatzl-0 ka-DExz Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              inputmode="numeric"
              placeholder="Enter text here"
              value=""
            />
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 dqNyBh Sizeweb__Size-sc-10bl685-0 htlLka"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> width renders input with auto width 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 fsjcxB"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 emyWjc Spaceweb__Space-njatzl-0 gfWbbX Sizeweb__Size-sc-10bl685-0 ecrXiG"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 Labelweb__FloatView-jw60wd-0 kOyWtk Spaceweb__Space-njatzl-0 egTcPC"
          >
            <label
              class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 iaevDk"
              color="shade.980"
              data-testid="ds-text"
              value=""
              width="auto"
            >
              Label
            </label>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 juRaGm Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 hqOwlt Sizeweb__Size-sc-10bl685-0 ccPMIj Spaceweb__Space-njatzl-0 ka-DExz Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              inputmode="numeric"
              placeholder="Enter text here"
              value=""
            />
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 dqNyBh Sizeweb__Size-sc-10bl685-0 htlLka"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> width renders input with medium(default) width 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 emyWjc Spaceweb__Space-njatzl-0 gfWbbX Sizeweb__Size-sc-10bl685-0 ecrXiG"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 Labelweb__FloatView-jw60wd-0 kOyWtk Spaceweb__Space-njatzl-0 egTcPC"
          >
            <label
              class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 iaevDk"
              color="shade.980"
              data-testid="ds-text"
              value=""
              width="medium"
            >
              Label
            </label>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 ifVRzc Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 hqOwlt Sizeweb__Size-sc-10bl685-0 ccPMIj Spaceweb__Space-njatzl-0 ka-DExz Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              inputmode="numeric"
              placeholder="Enter text here"
              value=""
            />
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 dqNyBh Sizeweb__Size-sc-10bl685-0 htlLka"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> width renders input with small width 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 btLJAM"
  >
    <div
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 hjAxCH"
    >
      <div
        class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 jhuIde"
      >
        <div
          class="Viewweb__View-sc-1cphyjf-0 TextInputweb__FillContainer-sc-199z6oj-2 emyWjc Spaceweb__Space-njatzl-0 gfWbbX Sizeweb__Size-sc-10bl685-0 ecrXiG"
        >
          <div
            class="Viewweb__View-sc-1cphyjf-0 Labelweb__FloatView-jw60wd-0 kOyWtk Spaceweb__Space-njatzl-0 egTcPC"
          >
            <label
              class="Textweb__Text-sc-6jf9e4-0 Labelweb__StyledText-jw60wd-1 iaevDk"
              color="shade.980"
              data-testid="ds-text"
              value=""
              width="small"
            >
              Label
            </label>
          </div>
          <div
            class="Viewweb__View-sc-1cphyjf-0 TextInputweb__InputContainer-sc-199z6oj-0 btXkAA Sizeweb__Size-sc-10bl685-0 eRcLdB Flexweb__Flex-ni2cjg-0 jOkEVe"
          >
            <input
              class="TextInputweb__StyledInput-sc-199z6oj-1 hqOwlt Sizeweb__Size-sc-10bl685-0 ccPMIj Spaceweb__Space-njatzl-0 ka-DExz Flexweb__Flex-ni2cjg-0 libPPx"
              data-testid="ds-text-input"
              inputmode="numeric"
              placeholder="Enter text here"
              value=""
            />
          </div>
        </div>
        <div
          class="Viewweb__View-sc-1cphyjf-0 Lineweb__StyledLine-jxwo4z-0 dqNyBh Sizeweb__Size-sc-10bl685-0 htlLka"
        />
      </div>
    </div>
  </div>
</div>
`;
